--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ svg {
 .row {
     display: flex;
     flex-direction: row;
+    align-items: center;
 
     gap: 8px;
 }
@@ -300,7 +301,7 @@ svg {
 #landing {
     padding: 24px;
     width: calc(100% - 48px);
-    min-height: calc(100vh - 125px);
+    height: clamp(900px, calc(100vh - 125px), 992px);
 
     overflow-x: hidden;
 }
@@ -345,6 +346,11 @@ svg {
 
 #appearance, #menu, #close {
     height: 20px;
+}
+
+#link {
+    width: 18px;
+    height: 18px;
 }
 
 #footer {
