--- a/responsive.css
+++ b/responsive.css
@@ -83,9 +83,8 @@
     }
 
     h1 {
-        font-size: 48px;
-        line-height: 52px;
-        max-height: fit-content;
+        font-size: clamp(48px, 12vw, 64px);
+        line-height: clamp(52px, 16vw, 68px);
     }
 
     h3 {
@@ -141,8 +140,11 @@
     #landing {
         padding: 16px;
         width: calc(100% - 32px);
-        height: clamp(640px, calc(100svh - 88px), 892px);
         gap: 0;
+    }
+
+    #landing-span {
+        height: calc(100vh - 88px);
     }
 
     #biography {
@@ -182,12 +184,11 @@
     }
 
     .sticker {
-        max-width: 72px;
-        max-height: 48px;
+        max-width: 64px;
+        max-height: 6vh;
 
         img {
-            max-height: 72px;
-            top: -12.5%;
+            max-height: 16vw;
         }
     }
 
