--- a/responsive.css
+++ b/responsive.css
@@ -25,14 +25,12 @@
     }
 
     #footer {
-        .grid {
+        .grid { 
             gap: 24px;
         }
 
-        .uppercase {
+        div:not(:first-child) {
             display: flex;
-            flex-direction: row;
-            justify-items: auto;
             gap: 12px;
 
             p, ul {
@@ -100,8 +98,8 @@
     }
 
     marquee {
+        padding: 6px 0 2px 0;
         font-size: 24px;
-        padding: 6px 0;
     }
 
     #header {
@@ -127,13 +125,14 @@
     }
 
     #footer {
-        padding: 32px 16px 64px 16px;
-        font-size: 12px;
+        .grid {
+            width: calc(100% - 32px);
+            padding: 32px 16px 64px 16px;
+            font-size: 12px;
+        }
 
-        .uppercase {
-            ul {
-                font-size: 10px;
-            }
+        ul {
+            font-size: 12px;
         }
     }
 
